# mlsweep

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/: examples.md  export_tensorboard.md  export_wandb.md  integration.md  mlsweep.md  pool.md  sweep_configuration.md
mlsweep/: .run_sweep.py.swp  __init__.py  _bayes.py  _parsync.py  _shared.py  _sweep.py  _topology.py  _utils.py  _writer_tensorboard.py  _writer_wandb.py  _writers.py  controller_ui.py  export_cmd.py  logger.py  pool.py  run_sweep.py  server.py  ui_server.py  visualize.py  worker.py
tests/: fake_train.py  run_writers.sh  sweep.py  test_generate_variations.py  test_integration.py  test_monotonic.py  test_parsync.py  test_pool.py  test_sweep.py  test_validate_options.py  train.py  workers.toml
tests/scripts/: bayes_fn.py  dist_train.py  fast_train.py  set_dist_env_train.py
tests/snapshots/: all_unnamed_default.json  bool_abbreviation.json  default_name_from_key.json  dict_flags.json  dict_flags_inferred.json  exclude.json  extra_flags.json  fixed_dim.json  monotonic_decreasing.json  monotonic_increasing.json  multiple_singular_diagonal.json  none_name.json  simple_cartesian.json  singular_ordering.json  singular_subdim.json  str_flags_fixed_subdim.json  subdim_name_none_parent.json  subdim_nested.json  three_level_nesting.json
tests/sweeps/: bayes_sweep.py  integration_grid.py  multigpu_sweep.py  set_dist_env_sweep.py  test_sweep.py  torchrun_sweep.py
