[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlsweep"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "tomli >= 2.0; python_version < '3.11'",
]

[project.scripts]
mlsweep_run = "mlsweep.run_sweep:main"
mlsweep_viz = "mlsweep.visualize:main"
mlsweep_worker = "mlsweep.worker:main"

[tool.setuptools.packages.find]
where = [""]
include = ["mlsweep*"]

[tool.setuptools.package-data]
mlsweep = ["_bin/parsync"]

[tool.mypy]
python_version = "3.10"
strict = true
