[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlsweep"
version = "1.0.0"
description = "A flexible hyperparameter sweep scheduler for distributed ML training"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Aaron Pazdera", email = "aarpazdera@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "tomli >= 2.0; python_version < '3.11'",
]

[project.optional-dependencies]
wandb = ["wandb"]
tensorboard = ["tensorboard"]
bayes = ["optuna>=3.0"]
all = ["wandb", "tensorboard", "optuna>=3.0"]
test = ["torch", "pytest"]

[project.scripts]
mlsweep_run = "mlsweep.run_sweep:main"
mlsweep_viz = "mlsweep.visualize:main"
mlsweep_worker = "mlsweep.worker:main"
mlsweep_export = "mlsweep.export_cmd:main"

[tool.setuptools.packages.find]
where = [""]
include = ["mlsweep*"]

[tool.setuptools.package-data]
mlsweep = ["_bin/.gitkeep"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["wandb", "wandb.*", "tensorboard", "tensorboard.*", "tensorboardX", "tensorboardX.*", "torch.*", "optuna", "optuna.*"]
ignore_missing_imports = true
